--- a/QL_SinhVien_Hibernate_Feature2/src/main/webapp/WEB-INF/resource/assets/css/style.css
+++ b/QL_SinhVien_Hibernate_Feature2/src/main/webapp/WEB-INF/resource/assets/css/style.css
@@ -6,7 +6,11 @@ body {
 	width: 400px;
 	margin: auto;
 }
-
+.error {
+	color: #ff0000;
+	font-size: 0.9em;
+	font-weight: bold;
+}
 .editbutton {
 	background: url(../img/edit.png) center;
 	border: none;
