--- a/QL_SinhVien_Hibernate_Feature2/src/main/webapp/WEB-INF/resource/assets/css/style.css
+++ b/QL_SinhVien_Hibernate_Feature2/src/main/webapp/WEB-INF/resource/assets/css/style.css
@@ -1,7 +1,12 @@
 body {
 	font-family: 'Arial'
 }
-
+.largecol {
+    width: 25%;
+}
+.autocol {
+    width: 45%;
+}
 .mainaddstudent {
 	width: 400px;
 	margin: auto;
