--- a/QL_SinhVien_Hibernate_Feature2/src/main/webapp/WEB-INF/resource/assets/css/style.css
+++ b/QL_SinhVien_Hibernate_Feature2/src/main/webapp/WEB-INF/resource/assets/css/style.css
@@ -14,6 +14,7 @@ body {
 	width: 25%;
 }
 
+
 .add-on .input-group-btn>.btn {
 	border-left-width: 0;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -27,9 +28,9 @@ body {
 }
 
 .navbar-nav>li>a {
-	border-right: 1px solid #ddd;
-	padding-bottom: 15px;
-	padding-top: 15px;
+/* 	border-right: 0px solid #ddd; */
+/* 	padding-bottom: 15px; */
+/* 	padding-top: 15px; */
 }
 
 .navbar-nav:last-child {
@@ -226,6 +227,7 @@ body {
 	border: 1px solid #999999;
 	display: table-cell;
 	padding: 3px 10px;
+	vertical-align: middle;
 }
 
 .divTableHeading {
